--- a/test.css
+++ b/test.css
@@ -2,10 +2,26 @@ body {
     margin:0;
     padding:0;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: smaller;
+    color: rgb(56, 56, 56)
 }
 
 hr{
     margin: 0;
+}
+
+h1, h2, h3, h4 {
+    margin: 0;
+}
+
+h3{
+    padding: 5px;
+}
+
+h4{
+    text-decoration: underline;
+    font-weight: 100;
+    font-size: small;
 }
 
 html, body {
@@ -14,7 +30,7 @@ html, body {
    }
 
 header{
-    background-color: darkgrey;
+    background-color: #C2C2C2;
 }
 
 .header-container{
@@ -25,11 +41,9 @@ header{
 }
 
 main{
-    background-color: cadetblue;
-}
-
-footer{
-    background-color: rgb(14, 223, 14);
+    
+    margin-top: 10px;
+    padding: 10px;
 }
 
 .nav{
@@ -44,6 +58,7 @@ footer{
 ul{
     list-style-type: none;
     display: inline;
+    padding: 0;
 }
 
 li{
@@ -59,8 +74,9 @@ li:last-child {
 
 .search-bar{
     position:relative; left:1100px; top:0px;
-    padding-bottom: 20px;
-    margin: 10px;
+    display: inline-block;
+    padding-bottom: 10px;
+    
 }
 
 input{
@@ -76,4 +92,83 @@ button {
     padding: 10px;
 }
 
+.left-container{
+    margin-top: 10px;
+}
 
+.template-container{
+    background-color: #C2C2C2;
+    margin-bottom: 20px;
+    max-width: 64%;
+}
+
+.template-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 10px;
+}
+
+a{
+    color: #0000AD;
+}
+
+.templates{   
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
+    padding-right: 55px;
+}
+
+.template-block{
+    max-width: fit-content;
+    text-align: center;
+}
+
+.right-container{
+    max-width: 35%;
+    position: relative;
+    top: -539px;
+    left: 860px;
+    font-size: larger;
+    padding: 10px 20px 10px 20px;
+}
+
+.form-layout{
+    justify-content: space-between;
+    padding: 5px;
+}
+
+fieldset{
+    padding-right: 70px;
+    border-width: 1px;
+    border: none;
+    padding-bottom: 20px;
+    background-color: #C2C2C2;
+}
+
+legend{
+    display: none;
+}
+
+.input{
+    float: right;
+    padding: 0;
+    margin: 0;
+}
+
+button{
+    float: right;
+}
+
+.video{
+    margin-top: 20px;
+    margin: 2px;
+    margin-top: 20px;
+    height: 289px;
+    
+}
+video{
+    width: 100%;
+    height: 100%;
+}
